docs: Add documentation for show all users
